# FloodAdapt-ABM

./: .gitignore  1_create_lookup_table.ipynb  2_simulate_adaptation.ipynb  3_run_coupled_abm.ipynb  3_simulate_adaptation_engine.ipynb  README.md  abm_simulator.py  environment.yml  floodadapt_abm_documentation.md  plot_impacts.ipynb  pyproject.toml  setup_lookup_table.py  setup_scenarios_lookuptable.ipynb
docs/: 20260708_performed_tasks.docx  20260708_performed_tasks.md  20260708_phase_3_model_documentaiton_phase.docx  20260708_phase_3_model_documentaiton_phase.md  20260708_phase_4b_model_documentaiton_phase.docx  20260708_phase_4b_model_documentaiton_phase.md  20260708_proposed_development_architecture_steps.docx  20260708_proposed_development_architecture_steps.md  20260709_performed_tasks.docx  20260709_performed_tasks.md  20260709_phase_4b_full_model_documentaiton_phase.docx  20260709_phase_4b_full_model_documentaiton_phase.md  20260709_proposed_architecture_all_phases.docx  20260709_proposed_architecture_all_phases.md  20260709_proposed_development_architecture_steps.docx  20260709_proposed_development_architecture_steps.md  AGENTS.md  adaptation_decisions_complete.md  architecture.md  coupling_architecture.md
example/: run_coupled_example.py  run_trace_manual_check.py
examples_engine/: 01_quickstart.py  02_rules_comparison.py  03_custom_rule.py  04_monte_carlo_uncertainty.py  05_dynamo_live_parity.py  06_mesa_native_driving.py  07_mesa_native_full.py  README.md  _shared.py  run_coupled_example_engine.py
floodadapt_abm/: __init__.py  abm_simulator.py  agent_state.py  coastal_node_adapter.py  coupling_config.py  decision_rule.py  dynamo_decision_bridge.py  dynamo_live_rule.py  event_utils.py  mesa_native.py  mesa_native_full.py  setup_lookup_table.py  simulation_engine.py
notebooks/: 1_create_lookup_table.ipynb  2_run_coupled_abm.ipynb
tests/: conftest.py  test_agent_state.py  test_coastal_node_adapter.py  test_decision_rule.py  test_dynamo_decision_bridge.py  test_event_utils.py  (+4 more)
(+7 files in other folders)
