[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floodadapt-abm"
version = "0.1.0"
description = "Agent-based flood adaptation simulation coupled with DYNAMO-M SEU decision framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "xarray",
    "scipy",
    "pandas",
    "netcdf4",
    "matplotlib",
]

[project.optional-dependencies]
# Full lookup-table generation pipeline (stage 1) requires flood-adapt
pipeline = ["flood-adapt==1.1.3"]
dev = ["pytest", "pytest-cov", "ipykernel", "jupyterlab"]

[tool.setuptools]
packages = ["floodadapt_abm"]
